# llamacli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
assets/: .gitkeep
data/: dataset_info.json
src/llamacli/: __init__.py  __main__.py  bootstrap.py  cli.py  env_setup.py  hf.py  logo.py  prompts.py  runner.py  state.py  workspace.py
src/phronis/: cli.py  env_setup.py  hf.py  logo.py  prompts.py  runner.py
src/phronis/data/: dataset_info.json
src/phronis/ui/: crt_boot.py  particle_logo.py  theme.py  timing.py
tests/: __init__.py  e2e_test_harness.py  test_cli_functions.py  test_demo_datasets.py  test_e2e.py  test_integration.py  test_negative_paths.py  test_prompts.py  test_runner.py  test_screens.py  test_smoke.py  test_state.py  test_workspace.py
