[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llamacli"
version = "0.1.0"
description = "Interactive CLI for fine-tuning LLMs — no config files, no boilerplate"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "llamacli" }
]
keywords = ["LLM", "fine-tuning", "LoRA", "CLI", "machine-learning", "huggingface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "llamafactory>=0.9.0",
    "typer>=0.12",
    "questionary>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pyfiglet>=1.0",
    "huggingface-hub>=0.25",
]

[project.scripts]
llamacli = "llamacli.cli:entry"

[project.urls]
Homepage = "https://github.com/llamacli/llamacli"
Repository = "https://github.com/llamacli/llamacli"

[tool.hatch.build.targets.wheel]
packages = ["src/llamacli"]
